--- a/layouts/shortcodes/postslist.html
+++ b/layouts/shortcodes/postslist.html
@@ -9,7 +9,7 @@
     "Type" "in" (slice "zh" "posts")) "Params.draft" "!=" true).ByDate.Reverse
     }} {{ end }} {{ range $recentPosts }}
     <div class="minimalist-item">
-        <span class="post-date">{{ .Date.Format "2006-01-02" }} - </span>
+        <span class="post-date">{{ .Date.Format "2006-01-02" }} </span>
         <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </div>
     {{ end }}
