--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -30,6 +30,5 @@ $currentYear) }}
 </div>
 
 {{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format
-"2006"}}{{ end }} <br />Made with <a href="https://gohugo.io">Hugo</a> ⋅ Theme
-by <a href="https://github.com/janraasch/hugo-bearblog/">Bearblog</a> ⋅
+"2006"}}{{ end }} <br />Made with <a href="https://gohugo.io">Hugo</a> <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ Bear Blog</a> ⋅
 <a href="/changelog">Changelog</a> ⋅ <a href="{{ "/index.xml" }}">RSS</a>
