feat(blog): add new blog posts on daikon and seven-point rating system
- update README with markdown reference examples
- remove outdated data files for books, games, and TV shows
- update date format in list layout
- add margin to post date styling

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,7 +22,7 @@
           <span>
             <i>
               <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-                {{ .Date.Format (default "02 Jan, 2006" .Site.Params.dateFormat) }}
+                {{ .Date.Format "2006 · 01" }}
               </time>
             </i>
           </span>
@@ -43,7 +43,7 @@
             <span>
               <i>
                 <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-                  {{ .Date.Format (default "02 Jan, 2006" .Site.Params.dateFormat) }}
+                  {{ .Date.Format "2006 · 01" }}
                 </time>
               </i>
             </span>
