--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -192,6 +192,7 @@
     .post-date {
         font-weight: 400;
         font-style: italic;
+        margin-right: 2rem;
     }
 
     .minimalist-item a {
