--- a/layouts/shortcodes/postslist.html
+++ b/layouts/shortcodes/postslist.html
@@ -4,7 +4,7 @@
     "posts")) "Params.draft" "!=" true }} {{ $recentPosts := first 7
     ($posts.ByDate.Reverse) }} {{ range $recentPosts }}
     <div class="minimalist-item">
-        <span class="post-date">{{ .Date.Format "2006-01-02" }} </span>
+        <span class="post-date">{{ .Date.Format "2006 · 01" }} </span>
         <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </div>
     {{ end }}
