feat(blog): update blog configuration and content
- updated copyright year in config.toml
- added new entries for books and games in progress
- removed outdated TV show entry
- simplified homepage layout and added an about page
- redesigned recent updates section to display single post format
- adjusted header and footer layouts for improved structure
- removed unused badge images

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -30,5 +30,4 @@ $currentYear) }}
 </div>
 
 {{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format
-"2006"}}{{ end }} <br />Made with <a href="https://gohugo.io">Hugo</a> <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ Bear Blog</a> ⋅
-<a href="/changelog">Changelog</a> ⋅ <a href="{{ "/index.xml" }}">RSS</a>
+"2006"}}{{ end }} ⋅ <a href="/changelog">Changelog</a> ⋅ <a href="{{ "/index.xml" }}">RSS</a>
