--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,12 +7,12 @@
   </small>
   {{ end }}
 
-  <h1><b>全部博文</b></h1>
+  <h2>全部博文</h2>
 
   {{ if .Pages }}
     {{ $postsByYear := .Pages.GroupByDate "2006" }}
     {{ range $postsByYear }}
-      <h2>{{ .Key }}</h2>
+      <h3>{{ .Key }}</h3>
       <ul class="blog-posts">
         {{ range .Pages }}
         <li>
