--- a/layouts/shortcodes/postslist.html
+++ b/layouts/shortcodes/postslist.html
@@ -1,11 +1,17 @@
 <!-- This is layouts/shortcodes/postslist.html -->
-<div class="minimalist-list">
+<div class="latest-post">
     {{ $posts := where (where .Site.RegularPages "Type" "in" (slice "zh"
-    "posts")) "Params.draft" "!=" true }} {{ $recentPosts := first 7
-    ($posts.ByDate.Reverse) }} {{ range $recentPosts }}
-    <div class="minimalist-item">
-        <span class="post-date">{{ .Date.Format "2006 · 01" }} </span>
-        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+    "posts")) "Params.draft" "!=" true }} {{ $recentPost := first 1
+    ($posts.ByDate.Reverse) }} {{ range $recentPost }}
+    <div class="latest-post-item">
+        <div class="post-header">
+            <span class="post-date">{{ .Date.Format "2006-01-02" }}</span>
+            <a href="{{ .RelPermalink }}" class="post-title">{{ .Title }}</a>
+        </div>
+        <a href="{{ .RelPermalink }}" class="post-description">
+            {{ if .Description }} {{ .Description }} {{ else }}
+            作者很懒，这篇没写 description {{ end }} →
+        </a>
     </div>
     {{ end }}
 </div>
