--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -30,4 +30,4 @@ $currentYear) }}
 </div>
 
 {{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format
-"2006"}}{{ end }} ⋅ <a href="/changelog">Changelog</a> ⋅ <a href="{{ "/index.xml" }}">RSS</a>
+"2006"}}{{ end }} ⋅ <a href="{{ "/index.xml" }}">RSS</a>
