--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -13,6 +13,11 @@
 <!-- Vertical layout for certain page types -->
 {{ if eq .Type "vert" }} {{ partial "style_vertical.html" . }} {{ end }}
 
+<!-- Render description as quote for posts -->
+{{ if and (or (eq .Type "posts") (eq .Type "zh")) .Params.description }}
+<blockquote><b>tl;dr</b><br />{{ .Params.description }}</blockquote>
+{{ end }}
+
 <content> {{ .Content }} </content>
 <p>
     {{ range (.GetTerms "tags") }}
